[tool.poetry]
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Nikolas Papaioannou <n0k0@hacky.software>", "Brock Smedley <brock@flashbots.net>"]
description = ""
name = "open-aea-flashbots"
readme = "README.md"
version = "1.2.0"
packages = [
    {include = "flashbots"},
]

[tool.poetry.dependencies]
python = "^3.9"
web3 = ">=6.0.0, <7.0.0"
coincurve = "==18.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
pytest-recording = "^0.11.0"
vcrpy = "^4.1.1"

[tool.black]
line-length = 88

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
